--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         android:background="#00773F"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
-        android:text="@string/bsignin"
+        android:text="@string/tLogin"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.531"
